--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
 				</div>
 			</div>
 			<div class="row">
-				<h3>Hello There!</h3>
-					<p>I'm a experienced software engineer with a demostrated history of working in the information technology and services industry. Skilled in mobile technologies like Android, Kotlin, Java, Flutter, MVP and MVVM patters. Strong engineering professional with a Software Engineer degree from Universidad Politécnica de Madrid.</p>
-			</div>
+				<h3><strong>Hello There!</strong></h3>
+				<p>Passionate <strong>software engineer</strong> with solid experience in the technology industry. With extensive knowledge in Java, Kotlin, C++, C#, Android, Flutter, and Unity. I have participated in <strong>successful projects</strong>, demonstrating advanced technical skills and an <strong>innovative approach</strong>. Constantly updated with the latest trends in software development, I stand out for my commitment to technical excellence <strong>high-quality solutions</strong> and the delivery of . With a results-oriented mindset, I look for challenges that <strong>expand my skills</strong> and contribute to the success of the projects in which I participate.</p>
+			</div>			
 		</div>
 	</div>
 
@@ -110,13 +110,26 @@
 						<li class="timeline-heading text-center animate-box">
 							<div><h3>Work Experience</h3></div>
 						</li>
+						<li class="timeline-inverted animate-box">
+							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title">Software Engineer</h3>
+									<span class="company">Siemens (Madrid)</span>
+									<span class="time">Feb 2023 - Current</span>
+								</div>
+								<div class="timeline-body">
+									<p>Developer of Siemens Rail Automation's Research and Development department.</p>
+								</div>
+							</div>
+						</li>
 						<li class="animate-box timeline-unverted">
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h3 class="timeline-title">Software Developer</h3>
+									<h3 class="timeline-title">Software Engineer</h3>
 									<span class="company">Indra (Madrid)</span>
-									<span class="time">Jan 2021 - Current</span>
+									<span class="time">Jan 2021 - Feb 2022</span>
 								</div>
 								<div class="timeline-body">
 									<p>Design & Development Ticketing Mobile Devices & Security. Developing Android solutions for projects in Ecuador, India, Alicante and Arabia.
@@ -228,7 +241,7 @@
 						<div class="chart" data-percent="100"><span>Teamwork</span></div>
 					</div>
 					<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-						<div class="chart" data-percent="100"><span>Communication</span></div>
+						<div class="chart" data-percent="100"><span>Flexibility</span></div>
 					</div>
 					<div class="col-md-3 col-sm-6 col-xs-12 text-center">
 						<div class="chart" data-percent="100"><span2>Time<br>Management</span2></div>
@@ -264,7 +277,7 @@
 			<div class="row">
 				<div class="col-md-6">
 					<div class="progress-wrap">
-						<h3><span class="name-left">Android</span><span class="value-right"></span></h3>
+						<h3><span class="name-left">Java</span><span class="value-right"></span></h3>
 						<div class="progress">
 						  <div class="progress-bar progress-bar-1 progress-bar-striped active" role="progressbar"
 						  aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width:100%">
@@ -272,7 +285,7 @@
 						</div>
 					</div>
 					<div class="progress-wrap">
-						<h3><span class="name-left">Kotlin</span><span class="value-right"></span></h3>
+						<h3><span class="name-left">Android</span><span class="value-right"></span></h3>
 						<div class="progress">
 						  <div class="progress-bar progress-bar-2 progress-bar-striped active" role="progressbar"
 						  aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width:100%">
@@ -280,7 +293,7 @@
 						</div>
 					</div>
 					<div class="progress-wrap">
-						<h3><span class="name-left">Java</span><span class="value-right"></span></h3>
+						<h3><span class="name-left">C#</span><span class="value-right"></span></h3>
 						<div class="progress">
 						  <div class="progress-bar progress-bar-3 progress-bar-striped active" role="progressbar"
 						  aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width:100%">
@@ -298,7 +311,7 @@
 				</div>
 				<div class="col-md-6">
 					<div class="progress-wrap">
-						<h3><span class="name-left">Flutter</span><span class="value-right"></span></h3>
+						<h3><span class="name-left">Kotlin</span><span class="value-right"></span></h3>
 						<div class="progress">
 						  <div class="progress-bar progress-bar-5 progress-bar-striped active" role="progressbar"
 						  aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width:100%">
@@ -306,7 +319,7 @@
 						</div>
 					</div>
 					<div class="progress-wrap">
-						<h3><span class="name-left">Unity</span><span class="value-right"></span></h3>
+						<h3><span class="name-left">Flutter</span><span class="value-right"></span></h3>
 						<div class="progress">
 						  <div class="progress-bar progress-bar-6 active" role="progressbar"
 						  aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width:100%">
@@ -314,7 +327,7 @@
 						</div>
 					</div>
 					<div class="progress-wrap">
-						<h3><span class="name-left">C#</span><span class="value-right"></span></h3>
+						<h3><span class="name-left">Unity</span><span class="value-right"></span></h3>
 						<div class="progress">
 						  <div class="progress-bar progress-bar-7 progress-bar-striped active" role="progressbar"
 						  aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width:100%">
@@ -409,7 +422,7 @@
 			</div>
 		</div>
 	</div>
-<!--
+	<!--
 	<div id="fh5co-blog">
 		<div class="container">
 			<div class="row animate-box">
@@ -483,7 +496,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<p>&copy; 2022. All Rights Reserved. <br>Sergio López Ceballos</a></p>
+					<p>&copy; 2024. All Rights Reserved. <br>Sergio López Ceballos</a></p>
 				</div>
 			</div>
 		</div>
